Fixed issue where bullet points felt too cramped

--- a/assets/global/critical/1-critical-stylings.css
+++ b/assets/global/critical/1-critical-stylings.css
@@ -199,5 +199,9 @@ h1, h2, h3, h4, h5 {
 * and https://bugzilla.mozilla.org/show_bug.cgi?id=1472637
 */
 img:-moz-loading {
- visibility: hidden;
+    visibility: hidden;
+}
+
+li {
+    line-height: 1.9em;
 }
